--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3,6 +3,7 @@
     "bug-reports": "Rapporter un problème ou une amélioration :",
     "bug-reports-back": "serveur, moteur de routage, appli Android, profils, site brouter.de ;",
     "bug-reports-front": "client web.",
+    "chat": "Chat with users and developers",
     "contact": "Contact :",
     "data": "Données :",
     "data-description": "Les données reposent sur <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. La mise à jour est généralement hebdomadaire, voir <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">les fichiers de données</a>. ",
@@ -36,7 +37,7 @@
     "ascend": "Dénivelé cumulé",
     "cost": "Coût",
     "distance": "Distance",
-    "energy-per-100km": "Énergie pour 100km",
+    "energy-per-100km": "pour 100km",
     "hours": "heures",
     "hours-abbrev": "h",
     "kilometer": "kilomètres",
@@ -46,7 +47,7 @@
     "mean-cost-factor": "Facteur coût moyen",
     "meter": "mètres",
     "meter-abbrev": "m",
-    "plain-ascend": "Dénivelé global",
+    "plain-ascend": "global",
     "total-energy": "Énergie totale",
     "travel-time": "Temps de trajet"
   },
