--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3,7 +3,7 @@
     "bug-reports": "Rapporter un problème ou une amélioration :",
     "bug-reports-back": "serveur, moteur de routage, appli Android, profils, site brouter.de ;",
     "bug-reports-front": "client web.",
-    "chat": "Chat with users and developers",
+    "chat": "Discuter avec d'autres utilisateurs et développeurs",
     "contact": "Contact :",
     "data": "Données :",
     "data-description": "Les données reposent sur <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. La mise à jour est généralement hebdomadaire, voir <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">les fichiers de données</a>. ",
