--- a/locales/pl.json
+++ b/locales/pl.json
@@ -28,6 +28,8 @@
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
+    "include": "Include",
+    "include_waypoints": "Waypoints",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
     "title": "Eksportuj trasę",
@@ -55,17 +57,18 @@
     "add-base": "Dodaj warstwę bazową",
     "add-overlay": "Dodaj nakładkę",
     "customize": "Dostosuj warstwy",
+    "opacity-slider": "Opacity slider",
     "placeholder-layer-name": "Własna nazwa warstwy. (np. OpenStreetMap)",
     "placeholder-layer-url": "URL niestandardowej warstwy. (np: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
     "remove-selection": "Usuń zaznaczenie"
   },
   "loadNogos": {
     "defaultProperties": "Domyślne właściwości",
-    "file": "Plik:",
+    "file": "File (.geojson): ",
     "load": "Wczytaj",
     "nogoBuffer": "Bufor stref no-go (w metrach):",
-    "nogoRadius": "Promień no-go (dla punktów):",
-    "nogoWeight": "Waga no-go:",
+    "nogoRadius": "No-go radius for points (in meters): ",
+    "nogoWeight": "No-go weight (-1 means impassable): ",
     "source": "Źródło",
     "title": "Wczytaj strefy no-go",
     "url": "URL: "
@@ -181,6 +184,7 @@
       "expand": "Rozwiń wszystkie",
       "optional": "Dodaj lub usuń opcjonalne warstwy",
       "optional-layers": "Więcej",
+      "overlay-opacity": "Overlay transparency",
       "table": {
         "URL": "URL",
         "empty": "Nie skonfigurowano jeszcze niestandardowych warstw.",
