--- a/locales/en.json
+++ b/locales/en.json
@@ -76,12 +76,12 @@
   "map": {
     "attribution-osm-long": "OpenStreetMap contributors",
     "attribution-osm-short": "OpenStreetMap",
-    "clear-route": "Clear route",
     "copyright": "Copyright",
     "cycling": "Cycling",
     "delete-last-point": "Delete last point",
-    "delete-nogo-areas": "&nbsp;&nbsp;also delete all no-go areas",
-    "delete-route": "Delete route?",
+    "delete-nogo-areas": "Delete all no-go areas",
+    "delete-route": "Delete route",
+    "delete-route-nogos": "Delete route and nogos",
     "draw-route-start": "Draw route (D key)",
     "draw-route-stop": "Stop drawing route (ESC key)",
     "hikebike-hillshading": "Hillshading",
